First bit of modeling with RMSLE and a bit more cleaning.

--- a/code/cleaning_and_eda_i.ipynb
+++ b/code/cleaning_and_eda_i.ipynb
@@ -535,72 +535,177 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "a5a077d4",
+   "execution_count": 13,
+   "id": "c667a79d",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "whole_weight\n",
-      "count    90615.000000\n",
-      "mean         0.789035\n",
-      "std          0.457671\n",
-      "min          0.002000\n",
-      "25%          0.419000\n",
-      "50%          0.799500\n",
-      "75%          1.067500\n",
-      "max          2.825500\n",
-      "Name: whole_weight, dtype: float64\n",
-      "~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
-      "whole_weight1\n",
-      "count    90615.000000\n",
-      "mean         0.340778\n",
-      "std          0.204428\n",
-      "min          0.001000\n",
-      "25%          0.177500\n",
-      "50%          0.330000\n",
-      "75%          0.463000\n",
-      "max          1.488000\n",
-      "Name: whole_weight1, dtype: float64\n",
-      "~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
-      "whole_weight2\n",
-      "count    90615.000000\n",
-      "mean         0.169422\n",
-      "std          0.100909\n",
-      "min          0.000500\n",
-      "25%          0.086500\n",
-      "50%          0.166000\n",
-      "75%          0.232500\n",
-      "max          0.760000\n",
-      "Name: whole_weight2, dtype: float64\n",
-      "~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
-      "shell_weight\n",
-      "count    90615.000000\n",
-      "mean         0.225898\n",
-      "std          0.130203\n",
-      "min          0.001500\n",
-      "25%          0.120000\n",
-      "50%          0.225000\n",
-      "75%          0.305000\n",
-      "max          1.005000\n",
-      "Name: shell_weight, dtype: float64\n",
-      "~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
-      "rings\n",
-      "count    90615.000000\n",
-      "mean         9.696794\n",
-      "std          3.176221\n",
-      "min          1.000000\n",
-      "25%          8.000000\n",
-      "50%          9.000000\n",
-      "75%         11.000000\n",
-      "max         29.000000\n",
-      "Name: rings, dtype: float64\n",
-      "~~~~~~~~~~~~~~~~~~~~~~~~~~\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sex</th>\n",
+       "      <th>length</th>\n",
+       "      <th>diameter</th>\n",
+       "      <th>height</th>\n",
+       "      <th>whole_weight</th>\n",
+       "      <th>whole_weight1</th>\n",
+       "      <th>whole_weight2</th>\n",
+       "      <th>shell_weight</th>\n",
+       "      <th>rings</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>7025</th>\n",
+       "      <td>I</td>\n",
+       "      <td>0.315</td>\n",
+       "      <td>0.230</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.1340</td>\n",
+       "      <td>0.0545</td>\n",
+       "      <td>0.0245</td>\n",
+       "      <td>0.3505</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14208</th>\n",
+       "      <td>I</td>\n",
+       "      <td>0.430</td>\n",
+       "      <td>0.340</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.3440</td>\n",
+       "      <td>0.1880</td>\n",
+       "      <td>0.0705</td>\n",
+       "      <td>0.1050</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32078</th>\n",
+       "      <td>M</td>\n",
+       "      <td>0.470</td>\n",
+       "      <td>0.355</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.5785</td>\n",
+       "      <td>0.2965</td>\n",
+       "      <td>0.1550</td>\n",
+       "      <td>0.1360</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>52324</th>\n",
+       "      <td>I</td>\n",
+       "      <td>0.315</td>\n",
+       "      <td>0.230</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.1340</td>\n",
+       "      <td>0.0530</td>\n",
+       "      <td>0.0375</td>\n",
+       "      <td>0.3505</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>70295</th>\n",
+       "      <td>I</td>\n",
+       "      <td>0.430</td>\n",
+       "      <td>0.340</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.4060</td>\n",
+       "      <td>0.2035</td>\n",
+       "      <td>0.0960</td>\n",
+       "      <td>0.1230</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>90295</th>\n",
+       "      <td>M</td>\n",
+       "      <td>0.430</td>\n",
+       "      <td>0.325</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.3335</td>\n",
+       "      <td>0.1350</td>\n",
+       "      <td>0.0585</td>\n",
+       "      <td>0.1050</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      sex  length  diameter  height  whole_weight  whole_weight1  \\\n",
+       "7025    I   0.315     0.230     0.0        0.1340         0.0545   \n",
+       "14208   I   0.430     0.340     0.0        0.3440         0.1880   \n",
+       "32078   M   0.470     0.355     0.0        0.5785         0.2965   \n",
+       "52324   I   0.315     0.230     0.0        0.1340         0.0530   \n",
+       "70295   I   0.430     0.340     0.0        0.4060         0.2035   \n",
+       "90295   M   0.430     0.325     0.0        0.3335         0.1350   \n",
+       "\n",
+       "       whole_weight2  shell_weight  rings  \n",
+       "7025          0.0245        0.3505      8  \n",
+       "14208         0.0705        0.1050      8  \n",
+       "32078         0.1550        0.1360      7  \n",
+       "52324         0.0375        0.3505      7  \n",
+       "70295         0.0960        0.1230      7  \n",
+       "90295         0.0585        0.1050     10  "
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
+   "source": [
+    "#On the topic: What's up with these 0s in height??\n",
+    "\n",
+    "df[df['height']==0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "5c437cf5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#We'll just assume they're errors... only a few so we'll drop them.\n",
+    "df=df[df['height']>0]\n",
+    "len(df[df['height']==0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a5a077d4",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "for i in df.columns[4:]:\n",
     "    if df[i].dtypes != 'object':\n",
@@ -631,38 +736,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "499bfbbb",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "sex on length\n",
-      "       count      mean       std    min    25%    50%    75%    max\n",
-      "sex                                                                \n",
-      "F    26495.0  0.584330  0.071348  0.230  0.545  0.585  0.630  0.815\n",
-      "I    33093.0  0.414792  0.104592  0.075  0.345  0.425  0.495  0.770\n",
-      "M    31027.0  0.568806  0.084280  0.090  0.530  0.575  0.620  0.815\n",
-      "~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
-      "sex on diameter\n",
-      "       count      mean       std    min    25%    50%    75%    max\n",
-      "sex                                                                \n",
-      "F    26495.0  0.458219  0.059050  0.130  0.425  0.460  0.500  0.635\n",
-      "I    33093.0  0.315766  0.085249  0.055  0.260  0.325  0.380  0.600\n",
-      "M    31027.0  0.445032  0.069665  0.090  0.415  0.450  0.485  0.650\n",
-      "~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
-      "sex on height\n",
-      "       count      mean       std   min    25%    50%    75%   max\n",
-      "sex                                                              \n",
-      "F    26495.0  0.157194  0.027658  0.05  0.140  0.155  0.175  1.13\n",
-      "I    33093.0  0.103129  0.029335  0.00  0.085  0.100  0.125  0.23\n",
-      "M    31027.0  0.151396  0.029591  0.00  0.135  0.150  0.170  1.13\n",
-      "~~~~~~~~~~~~~~~~~~~~~~~~~~\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Now, let's see what changes when we divide them up by category.\n",
     "\n",
@@ -690,52 +767,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "a1ad5c51",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "sex on whole_weight\n",
-      "       count      mean       std     min     25%     50%     75%     max\n",
-      "sex                                                                     \n",
-      "F    26495.0  1.051711  0.377650  0.0340  0.8130  1.0070  1.2800  2.8255\n",
-      "I    33093.0  0.396115  0.261157  0.0020  0.1870  0.3565  0.5730  2.7795\n",
-      "M    31027.0  0.983810  0.394574  0.0095  0.7635  0.9555  1.1785  2.8255\n",
-      "~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
-      "sex on whole_weight1\n",
-      "       count      mean       std     min     25%     50%     75%     max\n",
-      "sex                                                                     \n",
-      "F    26495.0  0.449880  0.175309  0.0145  0.3285  0.4305  0.5495  1.2695\n",
-      "I    33093.0  0.173873  0.117814  0.0010  0.0785  0.1575  0.2500  1.1455\n",
-      "M    31027.0  0.425631  0.184193  0.0035  0.3125  0.4070  0.5265  1.4880\n",
-      "~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
-      "sex on whole_weight2\n",
-      "       count      mean       std     min     25%     50%     75%    max\n",
-      "sex                                                                    \n",
-      "F    26495.0  0.227631  0.084946  0.0080  0.1705  0.2175  0.2815  0.590\n",
-      "I    33093.0  0.083415  0.056068  0.0005  0.0390  0.0735  0.1185  0.548\n",
-      "M    31027.0  0.211449  0.087605  0.0015  0.1590  0.2035  0.2615  0.760\n",
-      "~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
-      "sex on shell_weight\n",
-      "       count      mean       std     min    25%    50%     75%    max\n",
-      "sex                                                                  \n",
-      "F    26495.0  0.301273  0.107665  0.0090  0.232  0.287  0.3650  0.897\n",
-      "I    33093.0  0.114645  0.075507  0.0015  0.056  0.100  0.1615  0.885\n",
-      "M    31027.0  0.280194  0.111943  0.0015  0.215  0.270  0.3400  1.005\n",
-      "~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
-      "sex on rings\n",
-      "       count       mean       std  min  25%   50%   75%   max\n",
-      "sex                                                          \n",
-      "F    26495.0  11.161389  3.021624  1.0  9.0  10.0  12.0  29.0\n",
-      "I    33093.0   7.533557  2.131495  1.0  6.0   7.0   8.0  29.0\n",
-      "M    31027.0  10.753408  2.980265  1.0  9.0  10.0  12.0  29.0\n",
-      "~~~~~~~~~~~~~~~~~~~~~~~~~~\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "focus  = ['sex']\n",
     "for i in focus:\n",
@@ -760,25 +795,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "ad43cc94",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "sex\n",
-       "I    0.365204\n",
-       "M    0.342405\n",
-       "F    0.292391\n",
-       "Name: proportion, dtype: float64"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df['sex'].value_counts(normalize=True)"
    ]
@@ -794,38 +814,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "5727ac1c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "sex on length\n",
-      "      count      mean       std    min    25%   50%    75%    max\n",
-      "sex                                                              \n",
-      "F     127.0  0.401024  0.075858  0.235  0.355  0.39  0.440  0.630\n",
-      "I    4995.0  0.344606  0.056603  0.075  0.310  0.35  0.380  0.550\n",
-      "M     289.0  0.356093  0.068885  0.160  0.315  0.35  0.395  0.575\n",
-      "~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
-      "sex on diameter\n",
-      "      count      mean       std   min    25%    50%     75%    max\n",
-      "sex                                                               \n",
-      "F     127.0  0.304843  0.061444  0.13  0.265  0.295  0.3375  0.490\n",
-      "I    4995.0  0.257391  0.045341  0.10  0.225  0.260  0.2900  0.410\n",
-      "M     289.0  0.268443  0.056102  0.10  0.230  0.265  0.3000  0.475\n",
-      "~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
-      "sex on height\n",
-      "      count      mean       std    min    25%    50%    75%    max\n",
-      "sex                                                               \n",
-      "F     127.0  0.102441  0.024655  0.060  0.085  0.100  0.115  0.200\n",
-      "I    4995.0  0.084130  0.015347  0.015  0.075  0.085  0.095  0.140\n",
-      "M     289.0  0.088685  0.019302  0.030  0.075  0.085  0.100  0.155\n",
-      "~~~~~~~~~~~~~~~~~~~~~~~~~~\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Perhaps I should just make a loop, but eh...\n",
     "age_focus = df[df['rings']==6] #I ended up just changing this one a number of times.\n",
@@ -841,52 +833,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "cb83fd67",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "sex on whole_weight\n",
-      "      count      mean       std     min     25%     50%     75%     max\n",
-      "sex                                                                    \n",
-      "F     127.0  0.342756  0.216984  0.0740  0.2030  0.2805  0.4085  1.3615\n",
-      "I    4995.0  0.205839  0.094444  0.0080  0.1365  0.1895  0.2625  0.7305\n",
-      "M     289.0  0.236984  0.138651  0.0145  0.1475  0.2015  0.2925  0.9800\n",
-      "~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
-      "sex on whole_weight1\n",
-      "      count      mean       std    min     25%    50%    75%     max\n",
-      "sex                                                                 \n",
-      "F     127.0  0.149138  0.102306  0.026  0.0875  0.120  0.169  0.6275\n",
-      "I    4995.0  0.089586  0.047083  0.003  0.0565  0.081  0.115  0.4950\n",
-      "M     289.0  0.102939  0.066466  0.005  0.0590  0.083  0.126  0.4865\n",
-      "~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
-      "sex on whole_weight2\n",
-      "      count      mean       std     min     25%     50%      75%     max\n",
-      "sex                                                                     \n",
-      "F     127.0  0.074179  0.049851  0.0125  0.0475  0.0610  0.09425  0.3615\n",
-      "I    4995.0  0.043380  0.020316  0.0005  0.0285  0.0400  0.05700  0.1565\n",
-      "M     289.0  0.050746  0.030687  0.0045  0.0305  0.0415  0.06250  0.1960\n",
-      "~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
-      "sex on shell_weight\n",
-      "      count      mean       std    min    25%     50%      75%     max\n",
-      "sex                                                                   \n",
-      "F     127.0  0.097496  0.057727  0.020  0.060  0.0800  0.11775  0.3700\n",
-      "I    4995.0  0.059624  0.026517  0.003  0.040  0.0575  0.07650  0.3505\n",
-      "M     289.0  0.067798  0.035874  0.008  0.042  0.0600  0.08500  0.2485\n",
-      "~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
-      "sex on rings\n",
-      "      count  mean  std  min  25%  50%  75%  max\n",
-      "sex                                            \n",
-      "F     127.0   6.0  0.0  6.0  6.0  6.0  6.0  6.0\n",
-      "I    4995.0   6.0  0.0  6.0  6.0  6.0  6.0  6.0\n",
-      "M     289.0   6.0  0.0  6.0  6.0  6.0  6.0  6.0\n",
-      "~~~~~~~~~~~~~~~~~~~~~~~~~~\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "focus  = ['sex']\n",
     "for i in focus:\n",
@@ -919,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "0ea9cd16",
    "metadata": {},
    "outputs": [],
