--- a/code/modeliing_i.ipynb
+++ b/code/modeliing_i.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "57f0fa56",
+   "id": "12121e87",
    "metadata": {},
    "source": [
     "We'll at least start out with the given guys before feature engineering."
@@ -10,26 +10,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "d621cab2",
+   "execution_count": 23,
+   "id": "abb34d4c",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import numpy as np\n",
     "\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
     "\n",
     "from sklearn.feature_selection import RFECV #was hoping for this without the reverse, but I don't see it. Oh well when\n",
+    "from sklearn.model_selection import cross_val_score\n",
     "#it's just 8; well, it'll be more hectic momentarily...\n",
     "\n",
-    "from sklearn.metrics import mean_squared_log_error #Phew this on is on there"
+    "# from sklearn.metrics import make_scorer\n",
+    "from sklearn.metrics import root_mean_squared_log_error #Phew this on is on there... I mean find if we'd have to square,\n",
+    "#but rather not have to write the formula.\n",
+    "\n",
+    "# from sklearn.metrics import make_scorer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "3f60b977",
+   "execution_count": 2,
+   "id": "6652f1e3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,15 +47,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "685e478b",
+   "execution_count": 3,
+   "id": "4ca94d85",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(90615, 9)\n"
+      "(90609, 9)\n"
      ]
     },
     {
@@ -165,7 +171,7 @@
        "4        0.1975      9  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,8 +184,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "1646e071",
+   "execution_count": 4,
+   "id": "12f8249c",
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +307,7 @@
        "4        0.1975      9      1      0  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,24 +322,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
-   "id": "93f6fd06",
+   "execution_count": 5,
+   "id": "02b1e59f",
    "metadata": {},
    "outputs": [],
    "source": [
     "X = df.drop('rings', axis=1)\n",
     "y = df['rings']\n",
     "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, train_size=.85, random_state=26)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=.25, random_state=26) #Relatively large test size as we\n",
+    "#have so much data to work with...\n",
+    "#Re. 26 - I like that number. Discussion not for now\n",
     "\n",
-    "ss = StandardScaler() #Temp. removed to have an easier time seeing which feature names were used.\n",
-    "X_train = ss.fit_transform(X_train)\n",
-    "X_test = ss.transform(X_test)"
+    "mms = MinMaxScaler() #Temp. removed to have an easier time seeing which feature names were used.\n",
+    "X_train = mms.fit_transform(X_train)\n",
+    "X_test = mms.transform(X_test)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "8fbfeadc",
+   "id": "9e33a4b8",
    "metadata": {},
    "source": [
     "Given that this is somewhat of a professional environment, as opposed to my boot camp I just finished, I won't bother to explain all of my thoughts. However, note that I'll reuse this and similar lines of code until finding desired results."
@@ -341,55 +349,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "id": "3d6eb0fc",
+   "execution_count": 6,
+   "id": "ad8ff610",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.6064349934903679 0.600801283422068\n",
-      "[0.58969193 0.59513005 0.59530157 0.59991317 0.60008759 0.60621967\n",
-      " 0.6062019 ]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "lr = LinearRegression()\n",
+    "# model_defaults.get_feature_names_out()\n",
     "\n",
-    "rfe = RFECV(lr, step=1, cv=5, \n",
-    "                       min_features_to_select=3)\n",
-    "\n",
-    "model_defaults = rfe.fit(X_train, y_train)\n",
-    "print(model_defaults.score(X_train, y_train), model_defaults.score(X_test, y_test))\n",
-    "print(model_defaults.cv_results_['mean_test_score'])\n",
-    "#sum(model_defaults.cv_results_['mean_test_score'])/len(model_defaults.cv_results_['mean_test_score'])\n",
-    "\n",
-    "#Yeah... this is terrible. Well I mean, maybe the data is that hard... but I doubt it.Let's continue without feature enginering\n",
-    "#for now. Unfortunately, removing more features still hovered in the .6ish area"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "id": "3b91d436",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['length', 'diameter', 'height', 'whole_weight', 'whole_weight1',\n",
-       "       'whole_weight2', 'shell_weight', 'sex_I'], dtype=object)"
-      ]
-     },
-     "execution_count": 53,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "model_defaults.get_feature_names_out() #Hmm, quite interesting that we chose all the weights.... ie I'd understand if one, but\n",
+    "#Hmm, quite interesting that we chose all the weights.... ie I'd understand if one, but\n",
     "#apparetly the relative discremencies upon focusing on less and less of the alabone, quite literally, is that useful.\n",
     "\n",
     "#Also, the distinguishment between female is somehwat negligible, despite hte many difference we obsered... however from\n",
@@ -398,28 +365,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "112ef363",
+   "execution_count": 34,
+   "id": "8c6357c0",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'cross_val_score' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[19], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m cross_val_score(rfe, X_train, y_train, cv \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m5\u001b[39m)\u001b[38;5;241m.\u001b[39mmean()\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'cross_val_score' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n",
+      "0.6062234959016377 0.6034787674182922\n",
+      "[0.59003897 0.59367525 0.59568496 0.59954274 0.59970396 0.60580828\n",
+      " 0.60580744]\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.16508650876858538"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "#Oh, just remembered we're supposed to use MSLE. At th least we have a benchmark of what's good 'objectively'\n",
+    "\n",
+    "lr = LinearRegression()\n",
+    "rfe = RFECV(lr, step=1, cv=5,\n",
+    "                       min_features_to_select=3)\n",
+    "\n",
+    "model_defaults = rfe.fit(X_train, y_train)\n",
+    "\n",
+    "preds_model_defaults = rfe.predict(X_test)#And we're somehow getting some negative predictions.... note that againt his is\n",
+    "#without any feature engineering.... Regardless, we'll just brute force it. Unsure if we have a better wayt han the following:\n",
+    "\n",
+    "for i in range(len(preds_model_defaults)):\n",
+    "    if preds_model_defaults[i] < 0:\n",
+    "        preds_model_defaults[i] = 0\n",
+    "print(preds_model_defaults[preds_model_defaults<0])\n",
+    "\n",
+    "print(model_defaults.score(X_train, y_train), model_defaults.score(X_test, y_test))\n",
+    "print(model_defaults.cv_results_['mean_test_score'])\n",
+    "root_mean_squared_log_error(y_test, preds_model_defaults)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7cc2847d",
+   "id": "ea4fb8b2",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -427,7 +423,137 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38f09ae3",
+   "id": "03d466f9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "4cf46c33",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9504620112507841 0.6557858728716266\n",
+      "0.6445375107390473\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.15345037771109488"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#A little tempted to play around with the defaults, but eh...consideing that we likely need to engineer some things...\n",
+    "\n",
+    "rf = RandomForestRegressor(random_state=26)\n",
+    "\n",
+    "##Seems a bit redundant to use both here...\n",
+    "# rfe = RFECV(rf, step=1, cv=5, \n",
+    "#                        min_features_to_select=3)\n",
+    "\n",
+    "model_defaults = rf.fit(X_train, y_train)\n",
+    "\n",
+    "preds_model_defaults = rf.predict(X_test)\n",
+    "\n",
+    "for i in range(len(preds_model_defaults)):\n",
+    "    if preds_model_defaults[i] < 0:\n",
+    "        preds_model_defaults[i] = 0\n",
+    "\n",
+    "print(model_defaults.score(X_train, y_train), model_defaults.score(X_test, y_test))\n",
+    "# print(cross_val_score(rf, \n",
+    "#                       X_train, y_train, cv = 5).mean()) #Yeah,c ommenting this guy out... taking too long plus a bit redundant\n",
+    "# #Given that random forests are already aggregativing everything\n",
+    "root_mean_squared_log_error(y_test, preds_model_defaults)\n",
+    "\n",
+    "#oooooh yesss this is quite juicy... quite juicy abalane "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1dccc8a6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8d06f794",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e41a16de",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b5ad77e1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Some notes in case I need them"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7408dafa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pipe = Pipeline([\n",
+    "    ('cvec', CountVectorizer(lowercase=False)),\n",
+    "    ('bc', BaggingClassifier(random_state=26))\n",
+    "])\n",
+    "pipe_params = {'cvec__min_df' : [0.0]\n",
+    "               ,'cvec__max_df' : [.95]\n",
+    "               ,'cvec__ngram_range' : [(1,2)]\n",
+    "               ,'cvec__max_features' : [1800, 1750, 1700]\n",
+    "               ,'cvec__stop_words' : ['english']\n",
+    "              }\n",
+    "gs = GridSearchCV(pipe,\n",
+    "                  param_grid=pipe_params,\n",
+    "                  cv=5)\n",
+    "\n",
+    "gs.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e11cdfb2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(gs.score(X_train, y_train), gs.score(X_test, y_test))\n",
+    "print(gs.best_score_)\n",
+    "print(gs.best_params_)\n",
+    "#Oh wow, this did a lot "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "620808d8",
    "metadata": {},
    "outputs": [],
    "source": []
